
0.04    12 Nov 2007
        * add missing Metadata subclass for schema support
        * add missing init_db() to base class template, with detection
          for the new_or_cached() method.
        * clean up test files after tests

0.05    19 Nov 2007
        * custom object_from_form() and init_with_object() methods per
          recommended convention.
        * plant() now returns hash ref (RDBO => RHTMLO) instead of array ref
        * 'class' attribute set on each field to original column type value.
        * add garden_prefix() accessor in generated classes

0.06    23 Nov 2007
        * fix schema() use in Metadata where find_schemas() is false.
        * use database name as pseudo schema when find_schemas() is false.

0.07    10 Dec 2007
        * change find_schemas() default to 0, since only majority of common dbs do not
          yet support schemas.
        * added debug() flag

0.08    11 Dec 2007
        * fix bug when there are FKs spanning schemas. Now all classes are created
          before any .pm files are written.

0.09    12 Dec 2007
        * change t/01 test to reflect correct rdbo version. Caught by xeeble3.

0.10    08 Jan 2007
        * added mysql test - no code changes

0.11    01 Feb 2008
        * tweeked size check for column=>field code generation
        * added numeric field generator method
        * fix bug with textarea not being correctly generated
        * add mysql test to MANIFEST

0.12    21 May 2008
        * fix failing test due to indiscriminate nuking of Symbol table.

0.13    22 May 2008
        * fix (again) failing test to  indiscriminate nuking of Symbol table.

0.14    12 June 2008
        * add limit_to_schemas() option
        * put field class use and map settings into base Form code template instead of subclass template.

0.15    xxx
        * added 'bigint' to field-column mapping
        * add skip_map_class_forms boolean feature
        * add include_autoinc_form_fields boolean feature 